2008-09-18  Torbjorn Granlund  <tege@swox.com>

	* mpn/alpha/ev6/gmp-mparam.h (DIVEXACT_BY3_METHOD): Define.

	* mpn/ia64/diveby3.asm: Remove.
	* mpn/x86/diveby3.asm: Remove.
	* mpn/x86/k6/diveby3.asm: Remove.
	* mpn/x86/k7/diveby3.asm: Remove.
	* mpn/x86/p6/diveby3.asm: Remove.
	* mpn/x86/pentium/diveby3.asm: Remove.
	* mpn/x86_64/diveby3.asm: Remove.

	* configure.in (HAVE_NATIVE): List divexact_by3c.

	* gmp-impl.h (mpn_divexact_by3c): Override gmp-h.in's definition.
	(DIVEXACT_BY3_METHOD): Don't default to 0 if
	HAVE_NATIVE_mpn_divexact_by3c.

2008-09-16  Torbjorn Granlund  <tege@swox.com>

	* mpn/generic/toom_interpolate_7pts.c: Use new mpn_divexact_byN
	functions.

	* gmp-impl.h (mpn_divexact_by3, mpn_divexact_by5, mpn_divexact_by7,
	mpn_divexact_by9, mpn_divexact_by11, mpn_divexact_by13,
	mpn_divexact_by15): New macros, defined in terms of mpn_bdiv_dbm1.

	* configure.in (gmp_mpn_functions): List bdiv_dbm1c.
	(HAVE_NATIVE): Likewise.
	* mpn/asm-defs.m4: Define bdiv_dbm1c.
	* gmp-impl.h (mpn_bdiv_dbm1c): Declare.
	(mpn_bdiv_dbm1): New macro.
	* mpn/generic/bdiv_dbm1c.c: New file.
	* mpn/alpha/bdiv_dbm1c.asm: New file.
	* mpn/ia64/bdiv_dbm1c.asm: New file.
	* mpn/powerpc32/bdiv_dbm1c.asm: New file.
	* mpn/powerpc64/mode64/bdiv_dbm1c.asm: New file.
	* mpn/x86/bdiv_dbm1c.asm: New file.
	* mpn/x86_64/bdiv_dbm1c.asm: New file.

	* mpn/generic/diveby3.c: Add mpn_bdiv_dbm1c based function.
	Choose function depending on DIVEXACT_BY3_METHOD.
	* gmp-impl.h (DIVEXACT_BY3_METHOD): Provide default.

2008-09-10  Torbjorn Granlund  <tege@swox.com>

	* gmp-h.in: Unconditionally include <cstdio>.

2008-09-09  Torbjorn Granlund  <tege@swox.com>

	* doc/gmp.texi: Fix a typo and clarify mpn_gcdext docs.

2008-09-08  Torbjorn Granlund  <tege@swox.com>

	* mpn/generic/invert.c: Add working but slow code.

	* mpn/x86_64/x86_64-defs.m4 (R32, R8): New macros.

	* mpn/ia64/submul_1.asm: Move some labels for broader assembler
	compatibility.
